# moonstone

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
nix/: module.nix
