[workspace]
members = ["packages/native"]
resolver = "2"

[workspace.dependencies]
neon       = { version = "1.0", default-features = false, features = ["napi-6"] }
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell  = "1"
anyhow     = "1"

# rsky crates — vendored via git so moonstone stays self-contained.
# These are publish = false in the upstream workspace; git dep is the
# only clean way to consume them without copying source.
rsky-syntax   = { git = "https://github.com/blacksky-algorithms/rsky", branch = "main" }
rsky-identity = { git = "https://github.com/blacksky-algorithms/rsky", branch = "main" }
